--- a/benchmarks/fft/generator/Makefile
+++ b/benchmarks/fft/generator/Makefile
@@ -33,18 +33,24 @@ coarse_objects: monitor aces_stack aces_list aces_avltree aces_hash coarse_initi
 
 ifeq ($(IPCFG_TYPE), hash)
 link: fine_objects input
+	make -C ./CFE_RANDOM
+	gcc -c CFE_INJECTION.c
 	gcc -o $(FINAL_OUTPUT_BINARY) $(INPUT_MAIN).o fine_initialize_monitor.o monitor.o $(SSTACK)/aces_sstack.o  $(STACK)/aces_stack.o $(HASH)/aces_hash.o -lm -lpthread
 	@echo [IPCFG: Hash]
 endif
 
 ifeq ($(IPCFG_TYPE), avltree)
 link: fine_objects input
+	make -C ./CFE_RANDOM
+	gcc -c CFE_INJECTION.c
 	gcc -o $(FINAL_OUTPUT_BINARY) $(INPUT_MAIN).o fine_initialize_monitor.o monitor.o $(SSTACK)/aces_sstack.o $(STACK)/aces_stack.o $(TREE)/aces_avltree.o -lm -lpthread
 	@echo [IPCFG: avltree]
 endif
 
 ifeq ($(IPCFG_TYPE), list)
 link: fine_objects input CFE_INJECTION
+	make -C ./CFE_RANDOM
+	gcc -c CFE_INJECTION.c
 	gcc -o $(FINAL_OUTPUT_BINARY) $(INPUT_MAIN).o fine_initialize_monitor.o monitor.o CFE_INJECTION.o $(SSTACK)/aces_sstack.o $(STACK)/aces_stack.o $(LIST)/aces_list.o -lm -lpthread
 	@echo [IPCFG: List]
 endif
